--- a/views/dogs/edit.ejs
+++ b/views/dogs/edit.ejs
@@ -4,7 +4,7 @@
 
     <div class="row text-center mb-4 mt-2">
         <div class="col">
-            <h2 class="display-5"><i class="fas fa-paw"></i> Edit <%= dog.name %></h2>
+            <h2 class="display-5">Edit <%= dog.name %> <i class="fas fa-edit"></i></h2>
         </div>
     </div>
 
