--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,3 +34,7 @@
             </div>
         </div>
     </nav>
+
+    <div class="text-center">
+        <% include ../partials/messages %>
+    </div>
