minor changes to comment logic

--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -28,7 +28,7 @@
 
     <div class="row ml-4">
         <div class="col">
-            <a class="btn btn-dark btn-sm" href="/dogs">Go Back</a>
+            <a class="btn btn-dark btn-sm" href="/dogs/<%= dogId %>">Go Back</a>
         </div>
     </div>
 
