--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -41,16 +41,16 @@ body {
 }
 
 .slideshow li:nth-child(1) {
-    background-image: url(https://dl5zpyw5k3jeb.cloudfront.net/photos/pets/45723097/6/?bust=1569929393&width=1080)
+    background-image: url(https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60)
 }
 
 .slideshow li:nth-child(2) {
-    background-image: url(https://dl5zpyw5k3jeb.cloudfront.net/photos/pets/45723097/2/?bust=1566583296&width=1080);
+    background-image: url(https://images.unsplash.com/photo-1524511751214-b0a384dd9afe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
     animation-delay: 10s;
 }
 
 .slideshow li:nth-child(3) {
-    background-image: url(https://dl5zpyw5k3jeb.cloudfront.net/photos/pets/45723097/4/?bust=1566583300&width=1080);
+    background-image: url(https://images.unsplash.com/photo-1568480460649-14ec4222b7fd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
     animation-delay: 20s;
 }
 
@@ -60,7 +60,7 @@ body {
 }
 
 .slideshow li:nth-child(5) {
-    background-image: url(https://dl5zpyw5k3jeb.cloudfront.net/photos/pets/45723097/5/?bust=1569929393&width=1080);
+    background-image: url(https://images.unsplash.com/photo-1561130627-0456cca0bc4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
     animation-delay: 40s;
 }
 
