--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -5,7 +5,7 @@
 
         <div class="row text-center mt-2 mb-4">
             <div class="col">
-                <h2 class="display-5"> Add A New Comment To <%= foundDog.name %> <i class="fas fa-dog"></i></h2>
+                <h2 class="display-5"> Add Comment To <%= foundDog.name %> <i class="fas fa-dog"></i></h2>
             </div>
         </div>
 
