--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="row text-center">
-        <% dogs.forEach(dog => { %>
+        <% allDogs.forEach( dog => { %>
         <div class="col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card">
                 <img src="<%= dog.image %>" class="card-img-top border all-dogs" alt="<%= dog.name %>">
