--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="container">
-    <form action="/dogs/<%= dogId %>/comments/<%= foundComment._id %>?_method=PUT" method="POST">
+    <form action="/dogs/<%= id %>/comments/<%= foundComment._id %>?_method=PUT" method="POST">
 
         <div class="row text-center mt-2 mb-4">
             <div class="col">
@@ -28,7 +28,7 @@
 
     <div class="row ml-4">
         <div class="col">
-            <a class="btn btn-dark btn-sm" href="/dogs/<%= dogId %>">Go Back</a>
+            <a class="btn btn-dark btn-sm" href="/dogs/<%= id %>">Go Back</a>
         </div>
     </div>
 
