--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,17 +1,6 @@
-<% if (typeof errors != 'undefined'){ %> 
-    <% errors.forEach(function(error) { %>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <%= error.msg %>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-    <% }); %>
-<% } %>
-
 <% if(success_msg != ''){ %>
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= success_msg %>
+  <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+    <%= success_msg %> <i class="fas fa-check"></i>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -19,7 +8,7 @@
 <% } %>
 
 <% if(error_msg != ''){ %>
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
     <%= error_msg %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
@@ -28,7 +17,7 @@
 <% } %>
 
 <% if(error != ''){ %>
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
     <%= error %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
@@ -37,8 +26,8 @@
 <% } %>
 
 <% if(success != ''){ %>
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= success + " " + currentUser.username +"!" %>
+  <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+    <%= success + " " + currentUser.username %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
