--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -5,6 +5,16 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title text-center mb-3"><i class="fas fa-user-plus"></i> Register</h1>
+                <% if (typeof errors != 'undefined'){ %> 
+                    <% errors.forEach(function(error) { %>
+                        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+                          <%= error.msg %>
+                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                    <% }); %>
+                <% } %>
                 <form action="/users/register" method="POST">
                     <div class="form-group">
                         <label for="username">Username</label>
