install and configure dotenv

--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row text-center">
         <% allDogs.forEach( dog => { %>
-        <div class="col-sm-6 col-md-4 col-xl-3 mb-4">
+        <div class="col-sm-6 col-md-4 mb-4">
             <div class="card">
                 <img src="<%= dog.image %>" class="card-img-top border all-dogs" alt="<%= dog.name %>">
                 <div class="card-body">
