--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -42,7 +42,7 @@
 
     <div class="row justify-content-around">
         <div class="col-8">
-            <div class="card ml-3 mb-3">
+            <div class="card ml-3 mb-3 bg-light">
                 <div class="card-body">
                     <div class="text-right mb-2">
                         <a href="/dogs/<%= dog._id %>/comments/new" class="btn btn-success active" role="button"
