--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,6 +5,14 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h1>
+                <% if(error != ''){ %>
+                    <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+                      <%= error %>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                  <% } %>
                 <form action="/users/login" method="POST">
                     <div class="form-group">
                         <label for="username">Username</label>
